2003-08-05  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDispatcher.py: Fix generated dispatcher
	  code for new SmartPtr casts.

2003-08-04  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/SmartPtr.h, Atlas/Objects/SmartPtr.cpp:
	  Allow SmartPtr to be NULL, so we can use it for return values
	  less clumsily.

2003-07-30  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Negotiate.h: Removed unused Debug() macro. It was polluting
	  the global namespace.

2003-07-23  Al Riddoch  <alriddoch@zepler.org>

	* Ensure configure.ac does the important tests in C++.

2003-07-23  Al Riddoch  <alriddoch@zepler.org>

	* Switch to a cleaned up configure.ac.

2003-07-22  Ron Steinke <rsteinke@w-link.net>

	* Added internal refcounting to Atlas::Message::Element,
	  it should be user-transparent as long as you don't
	  hold a non-const reference to Element internals
	  across code that makes a copy of the same element.
	* Added iterator and const_iterator classes to BaseObjectData.

2003-07-03  Al Riddoch  <alriddoch@zepler.org>

	* Tweaks to the updated rpm spec.

2003-07-03  Al Riddoch  <alriddoch@zepler.org>

	* Update rpm spec to be cleaner, and make the technical sections
	  more generic.

2003-07-02  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Filter.h: Sort out streambuf.h problems by including
	  iostream instead.

2003-06-23  Al Riddoch  <alriddoch@zepler.org>

	* Changes to Makefile.ams to try and get distcheck to work.

	* tutorial/simple_client.cpp, tutorial/simple_server.cpp,
	  tutorial/DebugBridge.h: Include the library headers correctly.

2003-06-04  Al Riddoch  <alriddoch@zepler.org>

	* Add rpm spec.

2003-05-04  Al Riddoch  <alriddoch@zepler.org>

	* Fix linking tests with the right other libraries.

2003-05-04  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Element.h, Atlas/Message/Element.cpp: Move over to
	  calling Atlas::Message::Object Atlas::Message::Element instead.
